...
// Common

"general.on" = "On";
"general.off" = "Off";
"general.login" = "Login";
"general.logout" = "Logout";
"general.ok" = "OK";
"general.cancel" = "Cancel";
"general.username" = "Username";
"general.password" = "Password";

"input.value_is_empty" = "Value cannot be empty.";
"input.already_exists" = "Value already exists.";
...
"osd.filter_added" = "Added Filter: %@";
"osd.filter_removed" = "Removed Filter";
"osd.file_loop" = "Loop Single File";
"osd.playlist_loop" = "Loop Playlist";
"osd.no_loop" = "Disable Looping";

"preference.title" = "Preferences";
"preference.general" = "General";
"preference.ui" = "UI";
"preference.video_audio" = "Video/Audio";
"preference.subtitle" = "Subtitle";
"preference.network" = "Network";
"preference.control" = "Control";
"preference.keybindings" = "Key Bindings";
"preference.advanced" = "Advanced";
"preference.plugins" = "Plugins";
"preference.utilities" = "Utilities";
"preference.scripts" = "Scripts";
"preference.not_logged_in" = "Not logged in";
"preference.logged_in_as" = "Logged in as %@";
"preference.system_media_control" = "Use system media control";

"preference.key_binding_hint_1" = "To edit key bindings in current configuration file, click \"Duplicate…\" button first to create a copy.";
...
