...
    <dependencies>
        <deployment identifier="macosx"/>
        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="23094"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <customObject id="-2" userLabel="File's Owner" customClass="LogWindowController" customModule="IINA" customModuleProvider="target">
            <connections>
                <outlet property="levelPopUpButton" destination="7dr-9s-SXa" id="VS1-pk-EE1"/>
                <outlet property="logArrayController" destination="F8n-tu-6OJ" id="wqV-iD-q1N"/>
                <outlet property="logTableView" destination="ybI-a9-gbe" id="fjN-T7-4EN"/>
                <outlet property="subsystemPopUpButton" destination="Wj3-KQ-CjI" id="64G-vs-CfO"/>
                <outlet property="window" destination="QvC-M9-y7g" id="OkG-QY-4CJ"/>
...
                                    <rect key="frame" x="0.0" y="0.0" width="601" height="270"/>
                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                    <size key="intercellSpacing" width="17" height="0.0"/>
                                    <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                    <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                    <tableColumns>
                                        <tableColumn identifier="AutomaticTableColumnIdentifier.0" width="10" minWidth="10" maxWidth="10" id="rmO-L5-KBj">
                                            <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
                                                <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                                            </tableHeaderCell>
                                            <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" title="Text Cell" id="cib-lC-cNh">
                                                <font key="font" metaFont="system"/>
...
