...

    func checkToken() -> Bool {
      if usesUserToken {
        return true
      }
      // show alert for unregistered users
      let alert = NSAlert()
      alert.messageText = NSLocalizedString("alert.title_warning", comment: "Warning")
      alert.informativeText = String(format: NSLocalizedString("alert.assrt_register", comment: "alert.assrt_register"))
      alert.alertStyle = .warning
      alert.addButton(withTitle: NSLocalizedString("alert.assrt_register.register", comment: "alert.assrt_register.register"))
      alert.addButton(withTitle: NSLocalizedString("alert.assrt_register.try", comment: "alert.assrt_register.try"))
      let result = alert.runModal()
...
