...
                        <real value="3.4028234663852886e+38"/>
                        <real value="3.4028234663852886e+38"/>
                        <real value="3.4028234663852886e+38"/>
                        <real value="3.4028234663852886e+38"/>
                    </customSpacing>
                </stackView>
                <button identifier="FunctionalButtonClearHistory" horizontalHuggingPriority="750" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="SSk-Rd-BxH">
                    <rect key="frame" x="382" y="0.0" width="159" height="32"/>
                    <buttonCell key="cell" type="push" title="Delete All History…" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="MP6-Em-Lp4">
                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                        <font key="font" metaFont="systemBold"/>
                    </buttonCell>
                    <connections>
...
